<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LevelApp</string>
    <string name="edit_message">Message</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_send">Send</string>
    <string name="description">lalol lol</string>
    <string name="title">LevelApp</string>
    <string name="mr_x">Mr X</string>
    <string name="level">Level: </string>
    <string name="apoints">Achievement Points: </string>
    <string name="title_activity_profile_screen">ProfileScreen</string>
    <string name="app_name">HackLife</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="description">Hello world!</string>
    <string name="back_button">BACK TO MENU</string>
    <string name="profile">PROFILE: </string>
    <string name="name_label">NAME: </string>
    <string name="achievements_label">ACHIEVEMENTS: </string>
    <string name="xp_label">XP: </string>
    <string name="level_label">LEVEL: </string>
    <string name="bio_label">BIO: </string>
    <string name="edit_button">EDIT APPEARANCE</string>

</resources>
