<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
   	
    <!-- 1280 x 800 -->
    
    <!-- <RelativeLayout
	    android:id="@+id/persona"
	    android:layout_width="640dp"
	    android:layout_height="320dp"
	    android:layout_marginTop="160dp"
	    android:layout_marginLeft="32dp"
	    android:orientation="horizontal" >
		<ImageView android:contentDescription="@string/description"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:adjustViewBounds="true"
	        android:layout_marginLeft="128dp"
	        android:maxHeight="320dp"
	        android:maxWidth="640dp"
	        android:scaleType="fitXY"
	        android:src="@drawable/profile" />
	</RelativeLayout> -->
	
	<RelativeLayout
	    android:id="@+id/persona"
	    android:layout_width="640dp"
	    android:layout_height="320dp"
	    android:layout_marginTop="160dp"
	    android:layout_marginLeft="32dp"
	    android:orientation="horizontal" >
		<ImageButton android:contentDescription="@string/description"
	        android:layout_width="320dp"
	        android:layout_height="320dp"
	        android:layout_marginLeft="128dp"
	        android:scaleType="fitXY"
	        android:background="@drawable/profile" />
	</RelativeLayout>
	
	<TextView
        android:layout_width="fill_parent"
        android:id="@+id/title"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:gravity="center"
        android:layout_alignRight="@+id/persona"
        android:layout_marginRight="32dp"
        android:textSize="80sp" />
	
	<TextView
        android:layout_width="fill_parent"
        android:id="@+id/name"
        android:layout_height="wrap_content"
        android:text="@string/mr_x"
        android:gravity="center_horizontal"
        android:layout_alignRight="@+id/title"
        android:layout_below="@+id/persona"
        android:textSize="40sp" />
	
	<TextView
        android:layout_width="fill_parent"
        android:id="@+id/level"
        android:layout_height="wrap_content"
        android:text="@string/level"
        android:layout_alignLeft="@+id/persona"
        android:layout_below="@+id/name"
        android:layout_marginTop="60dp"
        android:textSize="30sp" />
	
	<ProgressBar
	    android:id="@+id/progress"
	    style="?android:attr/progressBarStyleHorizontal"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/persona"
	    android:layout_below="@+id/level"
	    android:layout_marginTop="10dp"
	    android:adjustViewBounds="true"
	    android:maxWidth="640dp" />
	
	<TextView
        android:layout_width="fill_parent"
        android:id="@+id/points"
        android:layout_height="wrap_content"
        android:text="@string/apoints"
        android:layout_alignLeft="@+id/persona"
        android:layout_below="@+id/progress"
        android:layout_marginTop="10dp"
        android:textSize="30sp" />
	
	<ImageButton android:contentDescription="@string/description"
        android:id="@+id/toDoList1"
        android:layout_width="576dp"
        android:layout_height="80dp"
        android:adjustViewBounds="true"
        android:maxHeight="80dp"
        android:maxWidth="128dp"
        android:layout_marginTop="160dp"
        android:layout_marginLeft="688dp"
        android:background="@drawable/todo" />
	
	<ImageButton android:contentDescription="@string/description"
        android:id="@+id/achievements"
        android:layout_width="576dp"
        android:layout_height="80dp"
        android:adjustViewBounds="true"
        android:maxHeight="80dp"
        android:maxWidth="18dp"
        android:layout_alignRight="@+id/toDoList1"
        android:layout_below="@+id/toDoList1"
        android:layout_marginTop="80dp"
        android:background="@drawable/achievements" />
	
	<ImageButton android:contentDescription="@string/description"
        android:id="@+id/skills"
        android:layout_width="576dp"
        android:layout_height="80dp"
        android:adjustViewBounds="true"
        android:maxHeight="80dp"
        android:maxWidth="18dp"
        android:layout_alignRight="@+id/achievements"
        android:layout_below="@+id/achievements"
        android:layout_marginTop="80dp"
        android:background="@drawable/skills" />

	
    
</RelativeLayout>